--- a/css/template.css
+++ b/css/template.css
@@ -368,7 +368,7 @@ h2 {
 }
 
 .heading-form::after {
-    margin: 20px 0 50px 400px;
+    margin: 20px 0 50px 375px;
     display: block;
     content: "";
     width: 260px;
@@ -521,5 +521,6 @@ footer p {
 .copyright {
     max-width: 400px;
     margin: 0 auto;
-    margin-top: 40px;
+    margin-top: 60px;
+    margin-bottom: -40px;
 }
